--- a/index.html
+++ b/index.html
@@ -104,5 +104,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="assets/js/imagen.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
