--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Ingrese los datos del animal
           </h6>
           <hr />
-          <div class="card-text my-3">
+          <div id="lala" class="card-text my-3">
             <div class="form-group">
               <label for="exampleInputPassword1">Nombre del animal:</label>
               <select class="form-control bg-dark text-white" id="animal">
